Bugfix/ax 2243 fix not with pql (#1921)
* Changed empty sytem condition to be as before so that image is not visible in the begining

* Revert "Changed empty sytem condition to be as before so that image is not visible in the begining"

This reverts commit ec00e53910224cb986ba928bee0202a589fdc141.

* AX-2148 Fixed the query for fetching data with certain field value

* AX-2146 Fixed link from single intersecting query pic chart slice

* Removed bug defender

* Fixed not parsing

* Beautify

* Styles

* Fixed badge AX-2289

* Update SchemaExpression.vue

* Fixed test

* Fixed bad height

--- a/plugins/gui/frontend/src/scss/styles.scss
+++ b/plugins/gui/frontend/src/scss/styles.scss
@@ -461,8 +461,8 @@ table {
   background-color: $theme-orange;
   color: $theme-black;
   border-radius: 100%;
-  width: 8px;
-  height: 8px;
+  width: 16px;
+  height: 16px;
   position: absolute;
   padding: 4px;
   text-align: center;
